--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.1.1",
     "mongoose-slug-generator": "^1.0.4"
   },
