--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
-  "version": 2,
-  "build": [
-    { 
-      "src": "./main.js", 
-      "use": "@vercel/node" 
-    }
-  ],
-  "routes": [
-    { 
-      "src": "/(.*)", 
-      "dest": "/"   
-    }
-  ]
+  "version": "1.0.0",
+  "build": [{ "src": "src/main.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
