--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "dev": "cross-env BUILD_MODE=dev nodemon --inspect src/main.js",
-    "production": "cross-env BUILD_MODE=production nodemon --inspect src/main.js",
+    "start": "nodemon --inspect src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
