--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "builds": [
     { 
-      "src": "./main.js", 
+      "src": "src/main.js", 
       "use": "@vercel/node" 
     }
   ],
   "routes": [
     { 
-      "src": "/(.*)", 
+      "src": "src/(.*)", 
       "dest": "/" 
     }
   ]
