--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
-  "builds": [
-    { 
-      "src": "src/main.js", 
-      "use": "@vercel/node" 
-    }
-  ],
   "routes": [
     { 
-      "src": "src/(.*)", 
+      "src": "/", 
       "dest": "/" 
+    },
+    {
+    "rewrites": [
+      {
+        "source": "/(.*)", 
+        "destination": "/"
+      }
+    ]
     }
   ]
 }
