--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cosmetic",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect src/main.js",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
