--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,16 @@
       "use": "@now/node"
     }
   ],
-	"rewrites": [{ "source": "/(.*)", "destination": "/src" }]
+  "routes": [
+    {
+      "src": "/(.*)", 
+      "dest": "/src" 
+    }
+  ],
+	"rewrites": [
+    { 
+      "source": "/(.*)", 
+      "destination": "/src" 
+    }
+  ]
 }
