--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Nam-Vu-Duc/bunnyStore#readme",
   "dependencies": {
+    "@vercel/analytics": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
