--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
+    "clean-css": "^5.3.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3"
   }
