--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.1.1",
-    "mongoose-slug-updater": "^3.3.0",
+    "mongoose-slug-updater": "^2.2.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
