--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
