--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose-slug-updater": "^2.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
